LSP- Default rating context

--- a/.gitignore
+++ b/.gitignore
@@ -323,3 +323,12 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+SolidPrinciple/.vs/ProjectEvaluation/solidprinciple.metadata.v5.2
+SolidPrinciple/bin/
+SolidPrinciple/obj/
+SolidPrincipleTest/bin/Debug/net6.0/SolidPrinciple.dll
+SolidPrincipleTest/bin/Debug/net6.0/SolidPrinciple.dll
+SolidPrinciple/.vs/SolidPrinciple/DesignTimeBuild/.dtbcache.v2
+SolidPrinciple/.vs/ProjectEvaluation/solidprinciple.projects.v5.2
+SolidPrinciple/.vs/SolidPrinciple/v17/.futdcache.v2
+SolidPrinciple/.vs/ProjectEvaluation/solidprinciple.projects.v5.2
